tests/invalid/Import_Invalid_1.whiley

function f(int x) -> int[]:
    return toString(x)

import toString from whiley.lang.Any

function g(real x) -> int[]:
    return toString(x)
